--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Pirate Game Jam 16 - You Are The Weapon - Unfinished Business.html"
+export_path="export/PGJ16 - Unfinished - v0.5/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Pirate Game Jam 16 - You Are The Weapon - Unfinished Business.exe"
+export_path="export/PGJ16 - You Are The Weapon - Untitled v0.5/Pirate Game Jam 16 - You Are The Weapon - Untitled v0.5.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
