--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/PGJ16 - Unfinished - v0.5/index.html"
+export_path="export/PSGJ16 - Back2Life/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
